--- a/01.Rumus_Dasar_ExCeL/01.rumus-dasar.md
+++ b/01.Rumus_Dasar_ExCeL/01.rumus-dasar.md
@@ -1,1 +1,33 @@
+# Rumus perhitungan dasar
 
+**01. Menghitung Jumblah**
+
+    =sum(masukkan cel 1 + masukkan cel 2)
+    =sum(masukkan cel 1 - masukkan cel 2)
+    =sum(masukkan cel 1 * masukkan cel 2)
+    =sum(masukkan cel 1 / masukkan cel 2)
+ 
+  Example :
+
+  -Bisa select cel dan geser sampai Cel mana.
+  
+  -Bisa Klic satu cel lalu kasih tanda ( , ) lalu pilih cel ke 2.
+  
+  -Bisa menggunakan ( : ) untuk menjumblahkan dari cel 1 ke cel berapa.
+  
+  sum=(C1+C2)  ( + ) Penjumblahan
+    
+  sum=(C1-C2)  ( - ) Pengurangan
+    
+  sum=(C1*C2)  ( * ) Perkalian
+    
+  sum=(C1/C2)  ( / ) Pembagian
+
+  **02. Menghitung Rata-rata**
+
+    =average(masukkan cel 1 : masukkan cel terakhir)
+
+  Example :
+
+  sum=
+    
